# EasyRealEstate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt  setup_env.bat  setup_env.sh
src/agents/: agents.py
src/config/: .env.example  config.py
src/memory/: chroma.sqlite3  mem.py
src/plugins/: tools.py
src/prompts/: prompts.py
src/sources/: LISTINGS.xlsx
