[tool.poetry]
name = "easyrealestate"
version = "0.0.1"
description = "EasyRealEstate is a specialized application that helps you find perfectly segmented real estate deals and investment properties in Italy ."
authors = ["Tonic <tonic@tonic-ai.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
chromadb = "^0.5.0"
pyautogen = "^0.2.28"
python-dotenv = "^1.0.1"
xgboost = "^2.0.3"
markdownify = "^0.12.1"
pandas = "^2.2.2"
einops = "^0.8.0"
openai = "^1.33.0"
openbb-agents = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
